# async-query-scheduler

./: .env.example  Dockerfile  Makefile  docker-compose.yml  otel-collector-config.yaml
alembic/: env.py
prd/prd-001-query-scheduler-platform-planning/: prd.md
prd/prd-001-query-scheduler-platform-planning/tasks/: 005-query-api-endpoints.md  006-query-sanitization-middleware.md  007-access-control-middleware.md  008-crash-recovery-on-startup.md  (+1 more)
query_scheduler/: .gitignore  CLAUDE.md  Makefile  README.md  alembic.ini  pyproject.toml
query_scheduler/alembic/: script.py.mako
query_scheduler/alembic/versions/: efdc324e9885_add_queries_table.py
query_scheduler/docs/: ARCHITECTURE.md  CONTRIBUTING.md
query_scheduler/prd/prd-001-query-scheduler-platform-planning/: dag.json
query_scheduler/prd/prd-001-query-scheduler-platform-planning/tasks/: .gitkeep  001-config-and-snowflake-settings.md  002-queryrecord-model-and-migration.md  003-warehouse-abstraction-layer.md  004-query-service.md
query_scheduler/src/query_scheduler/: schemas.py
query_scheduler/src/query_scheduler/core/storage/: repository.py
query_scheduler/src/query_scheduler/core/warehouse/: __init__.py
query_scheduler/src/query_scheduler/middleware/: __init__.py  access_control.py  query_sanitization.py
query_scheduler/src/query_scheduler/routes/: __init__.py  health.py  queries.py
query_scheduler/src/query_scheduler/services/: query_service.py
query_scheduler/tests/: conftest.py
scripts/: smoke_test.py  snowflake_test.py
src/query_scheduler/: app.py  models.py
tests/: test_health.py
(+9 files in other folders)
