[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "query_scheduler"
version = "0.1.0"
description = ""
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlmodel>=0.0.22",
    "alembic>=1.14",
    "asyncpg>=0.30",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
    "snowflake-connector-python>=4.4.0",
    "greenlet>=3.3.2",
]

[project.optional-dependencies]
otel = [
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20",
    "opentelemetry-instrumentation-fastapi>=0.44b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.44b0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.9",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
